# second-order-opt-by-annealer

./: .gitignore  LICENSE  README.md  TODO.txt  main.html  main.ipynb  pyproject.toml  requirements.txt
models/: config.json  config_adam.json  config_annealer.json  config_bfgs_full.json  config_bfgs_topk.json  config_topk.json  quadratic_mlp_adam_state_dict.pth  quadratic_mlp_annealer_state_dict.pth  quadratic_mlp_bfgs_full_state_dict.pth  quadratic_mlp_bfgs_topk_state_dict.pth  quadratic_mlp_full_state_dict.pth  quadratic_mlp_topk_state_dict.pth
notebooks/: compare_subset_sizes.ipynb  experiments.ipynb  main.ipynb  simulated_annealing_comp.ipynb  test_dwave_and_veloxq_backends.ipynb  test_mlp_MNIST.ipynb  test_mlp_digits.ipynb  tests.ipynb  tests_logreg_MNIST.ipynb  tests_logreg_digits.ipynb  tests_logreg_iris.ipynb  tests_mlp.ipynb  tests_mlp_iris.ipynb  tests_ridge_diabetes.ipynb  tests_svm_bc.ipynb
scripts/: diagnose_backends.py  mlflow.rotate.sh  run_block_size_comparison.py  run_experiment_grid.py  run_optimizer_comparison.py  run_overhead_breakdown.py  run_quality_vs_wallclock.py  run_sampler_transition_analysis.py
src/: losses.py  models.py  newton_optimizer.py  quadratic_annealing_optimizer.py  script_utils.py  training.py  utils.py  veloxq_sampler.py
src/gpu-simulated-annealing/: engine  engine.cu
src/gpu_simulated_annealing/: Makefile  __init__.py  engine  engine.cu  gpu_simulated_annealing.py
stats/: test_accuracy.pkl  test_loss.pkl  train_accuracy.pkl  train_loss.pkl  train_quadratic_energy.pkl
stats/full/: mode_full.pkl  (+5 more)
tests/: test_smoke.py
(+24 files in other folders)
